Change vendor names and other configurations for biscoind

--- a/node/package.json
+++ b/node/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vtex.binding-selector",
+  "name": "biscoind.binding-selector",
   "version": "2.1.4",
   "license": "UNLICENSED",
   "private": true,
